ref #PMA-16 fix visible label

--- a/src/app/shared/components/icon-input/icon-input.component.scss
+++ b/src/app/shared/components/icon-input/icon-input.component.scss
@@ -4,27 +4,19 @@
     position: relative;
 }
 
-.error_visible {
-    margin-bottom: -22px;
-    .input__error{
-        bottom: 4px;
-        position: relative;
-        white-space: normal;
-    }
-}
-
 .input__wrapper {
     position: relative;
     box-sizing:border-box;
     width: 100%;
-
 }
+
 
 // Input
 
 .input__form {
     font-size: 14px;
     color: var(--special-text-cl);
+    margin-left: 32px;
 
     &::placeholder {
         font-size: 14px;
@@ -47,10 +39,35 @@
     white-space: nowrap;
 }
 
+.error_visible {
+    margin-bottom: -22px;
+    .input__error{
+        bottom: 4px;
+        position: relative;
+        white-space: normal;
+    }
+}
 
+.input__icon{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+
+
+:host ::ng-deep .mat-focused,
+:host ::ng-deep .mat-form-field-should-float {
+    .mat-form-field-label-wrapper {
+        left: 0px !important;
+        top: -3px;
+    }
+}
 :host ::ng-deep .mat-form-field-wrapper {
     margin: 0;
     padding: 0;
+
 
     .mat-form-field-flex{
         padding-left: 16px;
@@ -58,8 +75,7 @@
     }
 
     .mat-form-field-infix{
-        display: grid;
-        grid-template-columns: min-content 1fr min-content;
+        display: flex;
         align-items: center;
         gap: 20px;
         padding: 20px 0 17px;
@@ -67,7 +83,17 @@
     }
 
     .mat-form-field-label-wrapper{
-        top: -3px;
+        top: -7px;
+        left: 34px;
+
+        transition: left 400ms cubic-bezier(0.25, 0.8, 0.25, 1)
     }
 
+    .mat-form-field-outline-start {
+        width: 11px !important;
+        border-radius: 8px 0 0 8px;
+    }
+    .mat-form-field-outline-end {
+        border-radius: 0 8px 8px 0;
+    }
 }
